fix(sass, gallery): resolve sass compile error on Windows and fix thumbnail alignment misalignment

--- a/src/components/organisms/ProductGallery/index.scss
+++ b/src/components/organisms/ProductGallery/index.scss
@@ -87,8 +87,8 @@
     @include m.button-native-reset($transparent-bg: true, $padding-zero: true);
 
     position: relative;
-    max-width: 152px;
-    max-height: 167px;
+    width: 152px;
+    height: 167px;
     flex: 0 0 auto;
     border-radius: 20px;
     overflow: hidden;
@@ -113,8 +113,8 @@
   }
 
   &__placeholder {
-    grid-column: 1;
-    grid-row: 1;
+    position: absolute;
+    inset: 0;
     width: 100%;
     height: 100%;
     @include m.skeleton-shimmer;
@@ -128,8 +128,8 @@
   }
 
   &__image {
-    grid-column: 1;
-    grid-row: 1;
+    position: absolute;
+    inset: 0;
     display: block;
     width: 100%;
     height: 100%;
@@ -213,8 +213,8 @@
     }
 
     &__thumb {
-      max-width: 125px;
-      max-height: 140px;
+      width: 125px;
+      height: 140px;
     }
 
     &__main {
@@ -234,8 +234,8 @@
     }
 
     &__thumb {
-      max-width: 105px;
-      max-height: 115px;
+      width: 105px;
+      height: 115px;
     }
 
     &__main {
